# app1

./: README.md  analysis_results.csv  analysis_results.json  complex_responses.jsonl  evaluation_report.json  pyproject.toml  requirements.txt  setup.py  test_local_run.py  test_prompt.txt  test_prompts.jsonl  test_responses.jsonl  test_workflow.json
promptscope/: __init__.py  analysis.py  apis.py  auth.py  cli.py  compare.py  evaluate.py  improve.py  scoring.py
tests/: __init__.py  test_compare_real.py
